--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 
     <div class="information">
       <div>
-        <img src="assets/Vector-1.png" alt="Vector1" class="vector1">
+        <img src="assets/Vector (1).png" alt="Vector1" class="vector1">
       </div>
       <div>
         <img src="assets/Frame 29546.png" alt="sseamless connection">
       </div>
       <div>
-        <img src="assets/Vector-2.png" alt="Vector2" class="vector2">
+        <img src="assets/Vector 2.png" alt="Vector2" class="vector2">
       </div>
     </div>
 
@@ -253,7 +253,7 @@
         </tr>
       </table>
       <button class="urlbutton">
-        Trim URL <img src="magic wand.png" alt="magic wand icon" />
+        Trim URL <img src="assets/magic wand.png" alt="magic wand icon" />
       </button>
       <p class="trimurl">
         By clicking TrimURL, I agree to the
@@ -282,12 +282,14 @@
     </div>
 
     <div class="one">
-      Is it necessary to create an account to use the URL shortening
+      <p>
+        Is it necessary to create an account to use the URL shortening
       service?
+      </p>
       <div class="line"></div>
     </div>
     <div class="two">
-      Are the shortened links permanent? Will they expire?
+     <p> Are the shortened links permanent? Will they expire?</p>
       <div class="line"></div>
     </div>
     <div class="three">
@@ -308,11 +310,12 @@
       <div class="line"></div>
     </div>
     <div class="seven">
-      How secure is the URL shortening service? Are the shortened links
-      protected against spam or malicious activity?
+     <p> How secure is the URL shortening service? Are the shortened links
+      protected against spam or malicious activity?</p>
       <div class="line"></div>
     </div>
-    <div class="eight">What is a QR code and what can it do?
+    <div class="eight">
+      <p>What is a QR code and what can it do?</p>
       <div class="line"></div>
     </div>
     <div class="nine">
@@ -324,9 +327,7 @@
   </div>
 
   <div class="revolution">
-    <img class="gradsix" src="gradsix.png" alt="gradsix" />
-    <img class="gradeit" src="gradeit.png" alt="gradeit" />
-    <img class="gradsvn" src="gradsvn.png" alt="gradsvn" />
+
     <div class="revitem">
       <div>
         <p>Revolutionizing Link Optimization</p>
@@ -334,11 +335,8 @@
       <div>
         <button class="started">Get Started</button>
       </div>
-      <img class="gradientone" src="gradientone.png" alt="gradientone" />
     </div>
-    <img class="gradientwo" src="gradientwo.png" alt="gradientwo" />
-    <img class="gradienthree" src="gradienthree.png" alt="gradienthree" />
-
+  
   </div>
 
   <footer>
@@ -357,9 +355,6 @@
         <h4>Why scissors</h4>
         <ul>
           <li><a href="#">Scissor 101
-
-
-
             </a></li>
           <li><a href="#">Integrations & API</a></li>
           <li><a href="#"> Pricing</a></li>
@@ -369,15 +364,7 @@
         <h4>Solutions</h4>
         <ul>
           <li><a href="#">
-
               Social Media
-
-
-
-
-
-
-
             </a></li>
           <li><a href="#">Digital Marketing</a></li>
           <li><a href="#">Customer Service</a></li>
@@ -399,21 +386,6 @@
         </ul>
       </div>
       <div class="box">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <h4>
           Company
         </h4>
@@ -428,6 +400,42 @@
       </div>
     </div>
 
+    <div class="secondcontainer">
+      <div class="resources">
+        <h4>Resouces</h4>
+        <ul>
+          <li><a href="#"> Blog</a></li>
+          <li><a href="#">Resource Library</a></li>
+          <li><a href="#">Developers</a></li>
+          <li><a href="#">App Connectors</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Trust Center</a></li>
+          <li><a href="#">Browser Extension</a></li>
+          <li><a href="#">Mobile App</a></li>
+        </ul>
+      </div>
+      <div class="features">
+        <h4>Features</h4>
+        <ul>
+          <li><a href="#"> Branded Links</a></li>
+          <li><a href="#">Mobile Links</a></li>
+          <li><a href="#">Campaign</a></li>
+          <li><a href="#">Management &</a></li>
+          <li><a href="#">Analytics</a></li>
+          <li><a href="#">QR Code generator</a></li>
+        </ul>
+      </div>
+      <div class="legal">
+        <h4>Legal</h4>
+        <ul>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Cookie Policy</a></li>
+          <li><a href="#">Terms of Services</a></li>
+          <li><a href="#">Acceptable Use Policy</a></li>
+          <li><a href="#">Code of Conduct</a></li>
+        </ul>
+      </div>
+    </div>
   </footer>
 
   <script src="script.js"></script>
