--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 
     <div class="optimizing">
       <h1>Optimize Your Online Learning With Our<br />Advanced <span class="advanced">URL Shortening</span> Solution
+        <br />
+        <img src="assets/Vector 3.jpg" alt="vector3" id="vectorth">
       </h1>
+      
       <p>Personalize your shortened URLs to align with your brand identity. Utilize custom slugs, branded links, and
         domain customization options to reinforce your brand presence and enhance user engagement.</p>
       <section>
@@ -436,6 +439,7 @@
         </ul>
       </div>
     </div>
+    <h6 id="terms">Term of Service | Security | Scissor 2023</h6>
   </footer>
 
   <script src="script.js"></script>
